# keyspace-circuits

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
aggregator/: Cargo.toml
aggregator/elf/: riscv32im-succinct-zkvm-elf
aggregator/src/: main.rs
batcher/: Cargo.toml
batcher/elf/: riscv32im-succinct-zkvm-elf
batcher/src/: main.rs
ecdsa_account/: Cargo.toml
ecdsa_account/elf/: riscv32im-succinct-zkvm-elf
ecdsa_account/src/: main.rs
ecdsa_record/: Cargo.toml
ecdsa_record/elf/: riscv32im-succinct-zkvm-elf
ecdsa_record/src/: main.rs
k_lib/: Cargo.toml
k_lib/src/: aggregator.rs  ecdsa_account.rs  lib.rs
k_lib/src/batcher/: account_proof.rs  inputs.rs  mod.rs  program.rs  record_proof.rs  tx.rs
k_lib/src/ecdsa_record/: current_data.rs  inputs.rs  k_public_key.rs  k_signature.rs  mod.rs  program.rs
k_lib/src/imt/: insert.rs  mod.rs  mutate.rs  node.rs  update.rs
k_lib/src/multisig_record/: inputs.rs  k_signature.rs  program.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/batcher/: inputs.rs  mod.rs  program.rs
lib/src/batcher/imt/: insert.rs  mod.rs  mutate.rs  node.rs  update.rs
lib/src/batcher/proof/: mod.rs  plonk.rs  sp1.rs
lib/src/batcher/tx/: mod.rs  offchain.rs  onchain.rs
lib/src/ecdsa_record/: inputs.rs  k_signature.rs  mod.rs  program.rs
multisig_record/: Cargo.toml
multisig_record/src/: main.rs
recurse/: Cargo.toml
recurse/elf/: riscv32im-succinct-zkvm-elf
recurse/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: lib.rs
