[workspace]

[package]
version = "0.1.0"
name = "batcher-program"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "1.0.1", features = ["verify"] }
sha2 = "0.10.8"
k_lib = { path = "../k_lib" }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8" }
