[package]
name = "batcher"
version = "0.1.0"
edition = "2021"


[dependencies]
lib = { path = "../lib" }
sp1-zkvm = { version = "1.1.1", features = ["verify"] }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8" }
