[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
imt = { git = "https://github.com/xenoliss/imt-rs" }
serde = { version = "1.0.206", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha2 = "0.10.8"
k256 = "0.13.3"
anyhow = "1.0.86"
num-bigint = "0.4.6"
gnark-bn254-verifier = "1.0.2"
num-traits = "0.2.19"
