[workspace]

[package]
version = "0.1.0"
name = "ecdsa-record-program"
edition = "2021"

[dependencies]
sp1-zkvm = "1.0.1"
# sp1-lib = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev", features = [
#     "secp256k1",
# ] }

k256 = "0.13.3"
sha2 = "0.10.8"

k_lib = { path = "../k_lib" }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
