[workspace]
[package]
version = "0.1.0"
name = "recurse-program"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "1.0.1", features = ["verify"] }
sp1-lib = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev", features = [
    "secp256k1",
] }
serde = { version = "1.0.204", features = ["derive"] }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
    "keccak",
] }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }
