[workspace]

[package]
version = "0.1.0"
name = "keyspace-script"
edition = "2021"
default-run = "prove_record"

[[bin]]
name = "prove_record"
path = "src/bin/ecdsa_record/prove.rs"

[[bin]]
name = "prove_batcher"
path = "src/bin/batcher/prove.rs"

[dependencies]
sp1-sdk = "1.0.1"
hex = "0.4.3"
k256 = "0.13.3"
k_lib = { path = "../k_lib" }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
bincode = "1.3.3"


[build-dependencies]
sp1-helper = "1.0.1"
