[workspace]

[package]
version = "0.1.0"
name = "keyspace-script"
edition = "2021"
default-run = "prove_record"

[[bin]]
name = "prove_record"
path = "src/bin/ecdsa_record/prove.rs"

[[bin]]
name = "prove_batcher"
path = "src/bin/batcher/prove.rs"

[dependencies]
imt = { git = "https://github.com/xenoliss/imt-rs" }
lib = { path = "../lib" }
sp1-sdk = "1.1.1"
hex = "0.4.3"
k256 = "0.13.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
base64 = "0.22.1"


[build-dependencies]
sp1-helper = "1.1.1"
